--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1><b>Welcome to this shitty website</b></h1>
-        <p><i>We are open for business!</i></p>
-        <p><img src="https://assets.vg247.com/current/2017/05/half_life_2_vr_mod-1.jpg" width="560" height="400">
-        <iframe width="560" height="400" src="https://www.youtube.com/embed/G63TF6OMa_8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42887.45168598526!2d67.68050137172845!3d47.79180703868545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4217d7842ed5255f%3A0xdd271a962d399116!2sZhezqazghan%20100000%2C%20Kazakhstan!5e0!3m2!1sen!2sau!4v1613437946793!5m2!1sen!2sau" width="560" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <img src="Images/Lush_forest_scenery.jpg" width="560" height="400"> 
+       <header>
+           <a href="index.html">
+            <img class="logo" src="images/logo.png" width ="300" height="300">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+       </header>
+       <main>
+       </main>
+       <footer>
+           <p>&copy; Boss 2021</p>
+       </footer>
+       
     </body>
 </html>
