Changed logo, colour of links, added text

--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home Page</title>
+        <title>Arsenal Football Club - Home</title>
         <meta charset="utf-8">
         <link rel="icon" href="Images/icon-800_800.png">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
        <header>
-           <a href="index.html">
-            <img class="logo" src="images/logo.png" width ="300" height="300">
-        </a>
+            <p>
+            <a href="index.html">
+            <img class="logo" src="images/arsenal.png" alt="Our logo" width ="200" height="200">
+            </p>
+            </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="index.html">Home</a> \
+            <a href="about.html">About</a> \
+            <a href="contact.html">Contact</a>
+            <p></p>
         </nav>
        </header>
-       <main>
+       <main class="p">
+           <h4>This is an unofficial website about Arsenal Football Club.</h4>
+            
        </main>
        <footer>
-           <p>&copy; Boss 2021</p>
+        <div class=footer>
+           <p style=color:whitesmoke><h5>&copy; 2021 Arsenal Football Club</h5></p>
+        </div>
        </footer>
        
     </body>
