Added more sections, changed bground colour, text

--- a/index.html
+++ b/index.html
@@ -13,20 +13,30 @@
             <img class="logo" src="images/arsenal.png" alt="Our logo" width ="200" height="200">
             </p>
             </a>
-        <nav>
+        <nav> 
+            <h4>
             <a href="index.html">Home</a> \
             <a href="about.html">About</a> \
+            <a href="news.html">News</a> \
+            <a href="match-reviews.html">Match Reviews</a> \
+            <a href="blog.html">Blog</a> \
             <a href="contact.html">Contact</a>
+            </h4>
             <p></p>
         </nav>
        </header>
        <main class="p">
-           <h4>This is an unofficial website about Arsenal Football Club.</h4>
-            
+            This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>.
+            <p>
+            A <b>full site launch</b> is scheduled for <b>March 2021.</b>
+            </p>
        </main>
        <footer>
         <div class=footer>
-           <p style=color:whitesmoke><h5>&copy; 2021 Arsenal Football Club</h5></p>
+           <p style=color:whitesmoke> 
+            <h5>
+            &copy; 2021 uhasaqo webdev
+            </h5>
         </div>
        </footer>
        
