Trying to add js script

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
             <p></p>
         </nav>
        </header>
+       <body>
+       <h2 class="ml9">
+        <span class="text-wrapper">
+          <span class="letters">Welcome!</span>
+        </span>
+      </h2>
+      <script language="javascript">
+      <script src="script.js"></script>
+      </script>
+        </body>
        <main class="p">
             This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>.
             <p>
