lots of changes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <h3 class="ml9">
         <span class="text-wrapper"></span>
         <span class="letters" dir="auto" lang="en">Welcome!</span>
-            <span class="bdi" dir=rtl lang="ar"><bdi>أَهْلًا وَ سَهْلًا‎</bdi></span>
+            <span class="bdi" dir=rtl lang="ar"><bdi>أَهلاً و سهلاً‎</bdi></span>
         </h3>
-        <script type="text/javascript" src="/js/script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         
        <main class="p">
             This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>.
