Banner bground, diff colours

--- a/index - Copy(original).html
+++ b/index - Copy(original).html
@@ -5,8 +5,6 @@
         <meta charset="utf-8" http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="icon" href="Images/arsenal.png">
         <link rel="stylesheet" href="styles.css">
-        <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
-            </style>
     </head>
     <body>
        <header class="header">
@@ -27,19 +25,19 @@
             <p></p>
        </header>
        <body>
-        <div class="banner">
         <h3 class="ml9">
         <span class="text-wrapper"></span>
         <span class="letters" dir="auto" lang="en">Welcome!</span>
             <span class="bdi" dir=rtl lang="ar"><bdi>أَهلاً و سهلاً‎</bdi></span>
         </h3>
-        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+        
        <main class="p">
-            <p>This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>.
-            <p>
+            This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>.
+            <br>
             A full site launch is scheduled for <b>March 2021.</b>
             </p>
-            <!-- <center><iframe width="488" height="280" src="https://www.youtube.com/embed/OnPak__nX4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center> -->
+            <center><iframe width="488" height="280" src="https://www.youtube.com/embed/OnPak__nX4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
        </main>
        <footer>
         <div class="footer">
