--- a/index.html
+++ b/index.html
@@ -1,54 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Arsenal Football Club - Home</title>
-        <meta charset="utf-8" http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <link rel="icon" href="Images/arsenal.png">
-        <link rel="stylesheet" href="styles.css">
-        <style> @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
-            </style>
-    </head>
-    <body>
-       <header class="header">
-            <p>
-            <a href="index.html">
-            <img class="logo" src="images/arsenal.png" alt="Our logo" width ="200" height="200">
-            </p>
-            </a>
-        <nav class="nav"> 
+
+<head>
+    <title>AFC Analysis - Home</title>
+    <meta charset="utf-8" http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <link rel="icon" href="Images/arsenal.png">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
+</head>
+
+<body>
+    <header class="main-header">
+        <a href="index.html">
+            <img class="logo" src="images/arsenal.png" alt="Our logo" width="200" height="200">
+        </a>
+        <nav style="main-nav">
             <h4>
-            <a href="index.html" title="Index" alt="Index">Home</a> \
-            <a href="about.html" title="About" alt="About">About</a> \
-            <a href="news.html" title="News" alt="News">News</a> \
-            <a href="match-reviews.html" title="Match Reviews" alt="Match Reviews">Match Reviews</a> \
-            <a href="blog.html" title="News" alt="Blog">Blog</a> \
-            <a href="contact.html" title="Contact" alt="Contact">Contact</a>
-            </h4> </nav>
-            <p></p>
-       </header>
-       <body>
+                <a href="index.html" title="Index" alt="Index">Home</a> \
+                <a href="about.html" title="About" alt="About">About</a> \
+                <a href="news.html" title="News" alt="News">News</a> \
+                <a href="match-reviews.html" title="Match Reviews" alt="Match Reviews">Match Reviews</a> \
+                <a href="blog.html" title="News" alt="Blog">Blog</a> \
+                <a href="contact.html" title="Contact" alt="Contact">Contact</a>
+            </h4>
+        </nav>
+    </header>
+    <main class="content">
         <div class="banner">
-        <h3 class="ml9">
-        <span class="text-wrapper"></span>
-        <span class="letters" dir="auto" lang="en">Welcome!</span>
-            <span class="bdi" dir=rtl lang="ar"><bdi>أَهلاً و سهلاً‎</bdi></span>
-        </h3>
+            <h3 class="Welcome">AFC Analysis</h3>
         </div>
-       <main class="p">
-            <p>This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>.
+        <article class="card">
+            <img alt="Bukayo Saka" src="images/saka.jpg">
             <p>
-            A full site launch is scheduled for <b>March 2021.</b>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p> </article>
+            <article class="card">
+            <img alt="Auba" src="images/auba.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p></article>
+            <article class="card">
+            <img alt="ESR" src="images/ESR.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p></article>
+            <article class="card">
+            </article><img alt="Odegaard" src="images/odegaard.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
             </p>
-            <!-- <center><iframe width="488" height="280" src="https://www.youtube.com/embed/OnPak__nX4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center> -->
-       </main>
-       <footer>
-        <div class="footer">
-           <p style=color:whitesmoke> 
-            <h5>
-            &copy; 2021 uhasaqo webdev
-            </h5>
-        </div>
-    </body>   
+            </article>
+            <article class="card">
+            <img alt="Yellow soccer ball" src="images/michael-c-ifRkVm7fxag-unsplash.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p></article>
+            <article class="card", img alt="Old soccer ball" src="images/brandi-ibrao-6TL-WevCdgk-unsplash.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p>
+            </article>
+        </article>
+
+        <!-- <br> -->
+        <!-- <p>This is an unofficial website dedicated to the one and only <b>Arsenal Football Club</b>. -->
+        <!-- <p> -->
+        <!-- A full site launch is scheduled for <b>March 2021.</b> -->
+        <!-- </p> -->
+    </main>
+    <footer class="main-footer">
+        <p class="copyright"><b>&copy; 2021 uhasaqo webdev</b></class>
+        <nav class="social-nav">
+            <a href="https://twitter.com" , title="Twitter" , alt="Twitter">
+                <i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" , title="Instagram" , alt="Instagram">
+                <i class="fab fa-instagram"></i></a>
+            <a href="https://facebook.com" , title="Facebook" , alt="Facebook">
+                <i class="fab fa-facebook"></i></a>
+        </nav>
     </footer>
-    </body>
+
+</body>
+
 </html>
